.gradle/gradle.log
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
E:\Mellenium\Mods\MelleniumADD\build\sources\java\com\brandon3055\draconicevolution\common\ModItems2.java:49: error: incompatible types: EnderArrow cannot be converted to ItemDE2
        enderArrow = new EnderArrow();
                     ^
E:\Mellenium\Mods\MelleniumADD\build\sources\java\com\brandon3055\draconicevolution\common\ModItems2.java:63: error: incompatible types: ChaoticCore cannot be converted to ItemDE2
        chaoticCore = new ChaoticCore();
                      ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 2.13 secs
